# online-course-management

./: .env.sample  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/api/: urls.py
backend/api/permissions/: base.py  course.py  grade.py  grade_comment.py  homework.py  lecture.py  submission.py
backend/api/serializers/: course.py  grade.py  grade_comment.py  homework.py  jwt.py  lecture.py  submission.py  user.py
backend/api/views/: course.py  grade.py  grade_comment.py  homework.py  jwt.py  lecture.py  submission.py  user.py
backend/backend/: settings.py
backend/config/: settings.py  urls.py
backend/domain/: models.py
backend/domain/comment/: models.py
backend/domain/course/: models.py
backend/domain/grade/: models.py
backend/domain/homework/: models.py
backend/domain/lecture/: models.py
backend/domain/submission/: models.py
backend/domain/user/: models.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_cors.py  test_course.py  test_grade.py  test_grade_comment.py  test_homework.py  test_lecture.py  test_submission.py  test_user.py
backend/tests/unit/: test_managers.py
